# RayTracer

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
include/Core/: ITransformable.hpp  PrimitiveConfig.hpp  PrimitiveFactory.hpp  PrimitiveFactoryExceptions.hpp  Scene.hpp
include/Math/: Point3D.hpp  Rectangle3D.hpp  Vector3D.hpp
include/Parser/: Parser.hpp
include/RayTracer/: AmbientLight.hpp  Camera.hpp  CompositePrimitive.hpp  Cone.hpp  Cylinder.hpp  DirectionalLight.hpp  HitInfo.hpp  ILight.hpp  IPrimitive.hpp  Plane.hpp  PointLight.hpp  Ray.hpp  Rectangle.hpp  Sphere.hpp  Triangle.hpp
include/Renderer/: Image.hpp  Renderer.hpp
include/UI/: CommandLineInterface.hpp  SFMLViewer.hpp
include/Utils/: Color.hpp  ObjLoader.hpp
scenes/: desk.cfg  personnage.cfg  pistol.cfg  simple_ground.cfg
src/: main.cpp
src/Core/: PrimitiveFactory.cpp  Scene.cpp
src/Math/: Point3D.cpp  Rectangle3D.cpp  Vector3D.cpp
src/Parser/: Parser.cpp
src/Plugins/: Cone_plugin.cpp  Cylinder_plugin.cpp  Plane_plugin.cpp  Rectangle_plugin.cpp  Sphere_plugin.cpp  Triangle_plugin.cpp
src/RayTracer/: AmbientLight.cpp  Camera.cpp  CompositePrimitive.cpp  Cone.cpp  Cylinder.cpp  DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Ray.cpp  Rectangle.cpp  Sphere.cpp  Triangle.cpp
src/Renderer/: Image.cpp  Renderer.cpp
src/UI/: CommandLineInterface.cpp  SFMLViewer.cpp
src/Utils/: Color.cpp  ObjLoader.cpp
tests/: bad_scene.cfg  missing_fields.cfg  parser_tests.cpp  renderer_tests.cpp  valid_scene.cfg
